# agi

./: .aider.chat.history.md  .aider.input.history  .anchored_summary  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  ARCHITECTURE_STATUS.md  AndroidManifest.xml  BROWSER_E2E_REPORT.md  CANONICAL_CHAT_PATH.md  CHANGELOG.md  CLI_ACCEPTANCE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FINAL_RELEASE_AUDIT.md  GA_CHECKLIST.md  JarvisLauncher.py  LAUNCH_CHECKLIST.md  LEGACY_SYSTEMS.md  LICENSE  MANIFEST.in  MESSAGE_TRACE.md  NVIDIA_SETUP.md  OWNER_GUIDE.html  PHASE_0_1_PROGRESS.md  RC_DASHBOARD.md  README.md  REGRESSION_DASHBOARD.md  RELEASE_NOTES_v3.0.0-rc3.md  ROADMAP.md  SECURITY.md  THE_TRUTH_ABOUT_CONVERSATION_ARCHITECTURE.md  UI_BACKEND_WIRING.md  _start_test.bat  _test_auto2.py  (+117 more)
.github/: copilot-instructions.md  pull_request_template.md
.opencode/: summary.md
_archive/: agent_runs.py  assistant_log.py  brand_injector.py  broadcast.py  code_graph.py  composio_tools.py  content_writer.py  context_compactor.py  dreaming.py  event_stream.py  format_classifier.py  llm_state.py  llm_stream.py  proactive_monitor.py  teacher_escalation.py  webhook_manager.py
agents/: all_agents.py  classifier.py  emotion.py  generator.py  quality.py
ai_os/: __init__.py  config.py  docker_sandbox.py  event_bus.py  memory.py  model_router.py  ollama_client.py  orchestrator.py  planner.py  policy.py  sandbox.py  sandbox_manager.py  tool_registry.py
alembic/: env.py
android_receiver/: AndroidManifest.snippet.xml  JarvisActionService.kt  JarvisBridgeReceiver.kt  README.md
api/: __init__.py  agent_routes.py  agi_routes.py  ai_os_routes.py  cloud_routes.py  cookbook_routes.py  email_routes.py  governance_routes.py  hybrid_integration.py  main_integration.py  memory_routes.py  os_routes.py  plugin_routes.py  ragflow_routes.py  research_routes.py  server.py  settings_routes.py  vision_routes.py  website_routes.py
apk/: settings.gradle
app/: build.gradle
archive/: COMPARISON.md  FRESH_COMPARISON.md  legacy_planning.py
assistant/: edge_tts_module.py  engine.py  smart_actions.py  stt.py  stt_protocol.py  tts.py  tts_protocol.py  voice_pipeline.py  wake_word.py
automation/: __init__.py  call_sync_server.py  messaging.py  pc_automation.py  routes.py
autonomy/: ARCHITECTURE.md  MIGRATION_GUIDE.md  __init__.py  requirements_autonomous.txt  setup.py
backend/: AUTOMATION_WORKFLOWS.md  call_sync_server.py  install_windows_assistant_startup.ps1  remove_windows_assistant_startup.ps1  requirements.txt  start_windows_assistant.bat  windows_assistant_daemon.ps1
benchmark_reports/: RC1_Gate1_consolidated.md  RC1_Gate2_production_validation.md  RC1_Gate2_report.md  RC3_2_WINDOWS.md  ablation_L1_qwen2.5_7b_20260624_234635.json  ablation_L1_qwen2.5_7b_20260624_234952.json  ablation_L1_qwen2.5_7b_20260624_235504.json  ablation_L1_qwen2.5_7b_20260624_235601.json  ablation_L1_qwen2.5_7b_20260625_000748.json  ablation_L1_qwen2.5_7b_20260627_224418.json  ablation_L1_qwen2.5_7b_20260627_225241.json  after_fix_200.json  autonomous_planner_enforcement_full.json  autonomous_planner_enforcement_test.json  autonomous_planner_enforcement_v2.json  autonomous_planner_enforcement_v3.json  autonomous_planner_enforcement_v4.json  autonomous_qwen2.5_7b .json  autonomous_qwen2.5_7b.json  autonomous_qwen2.5_7b_planner_v1.json  autonomous_qwen2.5_7b_planner_v2.json  autonomous_state_machine_v1.json  autonomous_state_machine_v2.json  autonomous_state_machine_v3.json  browser_bench_llama3.1_20260625_164259.json  browser_bench_llama3.1_20260625_172744.json  browser_bench_llama3.1_latest_20260626_212524.json  browser_bench_mistral_20260625_164747.json  browser_bench_qwen2.5_7b _20260629_125616.json  browser_bench_qwen2.5_7b_20260625_161500.json  browser_bench_qwen2.5_7b_20260625_163152.json  browser_bench_qwen2.5_7b_20260625_163840.json  browser_bench_qwen2.5_7b_20260625_172324.json  browser_bench_qwen2.5_7b_20260626_193932.json  browser_bench_qwen2.5_7b_20260626_195423.json  browser_bench_qwen2.5_7b_20260626_200013.json  browser_bench_qwen2.5_7b_20260626_200237.json  browser_bench_qwen2.5_7b_20260626_204119.json  browser_bench_qwen2.5_7b_20260626_221012.json  browser_bench_qwen2.5_7b_20260626_222102.json  (+56 more)
benchmark_results/: memory_ranking.json
benchmarks/: REPRODUCE.md  ablation_benchmark.py  autonomous_workflow_benchmark.py  browser_automation_benchmark.py  capability_benchmark.py  e2e_results.jsonl  hierarchical_benchmark.py  long_horizon_benchmark.py  memory_ranking_benchmark.py  multi_agent_benchmark.py  parallel_agent_graph_benchmark.py  parallel_workflow_benchmark.py  real_repo_recovery.py  research_quality_benchmark.py  soak_benchmark.py  workflow_durability_benchmark.py
brain/: AdaptiveSelfRepair.py  AuthorityStack.py  BrainPolicyEngine.py  CapabilityMatrix.py  ContinuousCognitionLoop.py  CounterfactualSimulator.py  ExecutiveGovernor.py  GovernanceValidator.py  IdentityKernel.py  MetaCognitionEngine.py  SelfGovernanceMonitor.py  StrategicDelegator.py  TemporalMemoryCore.py  UnifiedBrain.py  WorldStateEngine.py  __init__.py  __main__.py  adapters.py  cognitive_patterns.py  compiler_repair_engine.py  epistemic_tagger.py  execution_context.py  executor.py  goal_generator.py  learning_engine.py  persistence.py  production_gate.py  prompt_optimizer.py  reasoning_engine.py  repair_chaining.py  self_improvement.py  skill_acquisition.py  structural_transformer.py  task_resolver.py  world_model.py
channels/: __init__.py  base.py  controller.py  discord_channel.py  email_channel.py  irc_channel.py  matrix_channel.py  processor.py  slack_channel.py  telegram_bot.py  telegram_channel.py
competitive_analysis/: COMPETITOR_MATRIX.md
config/: quality_constitution.json  roles.yaml
cookbook/: README.md
copy/: part_01_of_20.txt  part_02_of_20.txt  part_03_of_20.txt  part_04_of_20.txt  part_05_of_20.txt  part_06_of_20.txt  part_07_of_20.txt  part_09_of_20.txt  part_10_of_20.txt
jarvis_plugin_sdk/: __init__.py  pyproject.toml  setup.py
(+2207 files in other folders)
