[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-launcher"
version = "0.1.0"
description = "Unified JARVIS launcher for CLI, server, GUI, models, and IDE integrations."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "JARVIS" }
]
dependencies = []

[project.scripts]
jarvis = "jarvis:main"

[tool.setuptools]
py-modules = ["jarvis"]

[tool.setuptools.packages.find]
include = ["jarvis_os*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit", "tests/integration", "tests/contract", "tests/e2e", "tests"]
markers = [
    "unit: Fast unit tests with no external dependencies",
    "integration: Cross-module integration tests",
    "contract: API contract validation",
    "e2e: End-to-end tests that require a running server",
    "slow: Long-running tests (skipped by default)",
    "intent: Tests for a specific intent type",
]
filterwarnings = ["ignore::DeprecationWarning"]
log_cli = false

# Run: pytest -m "unit"          (unit tests only)
# Run: pytest -m "not slow"      (skip long-running tests)
# Run: pytest -m "e2e"           (full server tests)
