[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-ai"
version = "3.0.0-rc3"
description = "Autonomous AI workspace orchestrator — CLI, web UI, voice, coding, research, and automation"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
  { name = "JARVIS Project" },
]
maintainers = [
  { name = "JARVIS Project" },
]
keywords = [
    "jarvis", "ai", "assistant", "autonomous", "coding", "agent",
    "workflow", "automation", "ollama", "llm", "codegen",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core runtime
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
    "python-multipart",
    "python-dotenv>=1.0.0",
    "httpx>=0.27,<0.29",
    "bcrypt>=3.2.0",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "prompt_toolkit",
    "textual>=2.0.0",
    "pillow>=10.0.0",
    "psutil>=5.9.0",
    "websockets>=11.0.0",
    "aiohttp>=3.9.0,<3.14",
    "anthropic>=0.25.0",
    "pyotp",
    "python-socketio>=5.0.0",
    "rich>=13.0.0",
    "alembic>=1.12.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.48.0",
]
voice = [
    "sounddevice>=0.4.0",
]
vision = [
    "deepface>=0.0.79",
]
firebase = [
    "firebase-admin>=6.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://jarvis.ai"
Repository = "https://github.com/anomalyco/jarvis"
Documentation = "https://docs.jarvis.ai"
Changelog = "https://github.com/anomalyco/jarvis/releases"
Issues = "https://github.com/anomalyco/jarvis/issues"

[project.scripts]
jarvis = "jarvis:main"

[tool.setuptools]
py-modules = [
    "jarvis",
    "cli_commands",
    "cli_completer",
    "cli_config",
    "cli_helpers",
    "cli_requests",
    "cli_server",
    "cli_slash_commands",
    "cli_state",
    "cli_utils",
    "cli_visuals",
    "cli_visuals_new",
]

[tool.setuptools.packages.find]
include = [
    "core*",
    "static*",
    "ai_os*",
    "assistant*",
    "brain*",
    "demo*",
    "jarvis_os*",
    "jarvis_tui*",
    "mcp*",
    "media*",
    "memory*",
    "orchestrator*",
    "services*",
    "skills*",
    "tools*",
    "utils*",
    "alembic*",
]
exclude = [
    "tests*",
    "benchmarks*",
    "scripts*",
    "legacy*",
]

[tool.setuptools.package-data]
core = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit", "tests/integration"]
markers = [
    "unit: Fast unit tests with no external dependencies",
    "integration: Cross-module integration tests",
    "slow: Long-running tests (skipped by default)",
]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["core"]
omit = ["*/tests/*"]
parallel = true

[tool.coverage.report]
show_missing = true
fail_under = 60
precision = 1
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "except Exception",
    "except:",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W", "I", "N", "UP", "YTT"]
ignore = ["E402", "E501", "F841"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
exclude = [
    "tests/",
]
